--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 /* mixin */
 /* :: Import Fonts */
 @import url("https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Noto+Sans+KR:300,400,500,600,700");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css");
 /* :: Import All CSS */
 @import url("/vendor/bootstrap/bootstrap.min.css");
 @import url("/vendor/magnific-popup/magnific-popup.css");
@@ -518,4 +519,7 @@ nav .page-item.active .page-link {
 #sidebar .badge-secondary:hover {
   background-color: #0057a7; }
 
+#jumbotron
+  .jumbotron {
+    background-color:transparent !important; 
 }
