--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 /* Variables */
 /* mixin */
 /* :: Import Fonts */
-@import url("https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700|Noto+Sans+KR:300,400,500,600,700");
+
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css");
 /* :: Import All CSS */
 @import url("/vendor/bootstrap/bootstrap.min.css");
